--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,16 @@
-
 {
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "http://localhost:3000/api/$1"
+      "destination": "https://chatapp-ccey.onrender.com/api/$1"
     },
     {
       "source": "/socket.io/(.*)",
-      "destination": "http://localhost:3000/socket.io/$1"
+      "destination": "https://chatapp-ccey.onrender.com/socket.io/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
